# tpdl24-comparative-analysis-user-interactions-in-digital-libraries

./: .gitignore  README.md  main.py  pyproject.toml
analysis/: data_processing.py  session_analysis.py  session_generation.py  suss_processing.py  utils.py  visualization.py
data/: synthetic_queries.txt
data/econbiz/synthetic_sessions/: synthetic_0a4gktsm19sqip5fchc3h29qs7.json.txt
data/econbiz/synthetic_sessions/json/: synthetic_0a4gktsm19sqip5fchc3h29qs7.json.json
metrics/suss/: session_metrics_suss.txt  topology_interaction_suss.csv
